--- a/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
@@ -21,13 +21,13 @@
    <Label styleClass="title-label" text="PLAY YOUR STARTER CARD">
    </Label>
     <HBox alignment="CENTER" spacing="20">
-        <VBox fx:id="frontCardContainer" alignment="CENTER" spacing="10">
+        <VBox fx:id="frontCardContainer" alignment="CENTER" spacing="10" translateX="-10.0">
             <Label styleClass="little-label" text="Front:">
             </Label>
-            <Button fx:id="playFrontButton" onAction="#handlePlayFront" style="-fx-background-color: #a2ecbb;" styleClass="little-label" text="Play Front">
+            <Button fx:id="playFrontButton" onAction="#handlePlayFront" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="Play Front">
             </Button>
         </VBox>
-        <VBox fx:id="backCardContainer" alignment="CENTER" spacing="10">
+        <VBox fx:id="backCardContainer" alignment="CENTER" spacing="10" translateX="10.0">
             <Label text="Back:">
                 <font>
                     <Font name="Book Antiqua Bold Italic" size="12.0" />
