--- a/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.MainMenuStateController">
-    <StackPane styleClass="scene-dimensions,scene-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <StackPane styleClass="scene-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <VBox alignment="CENTER" spacing="10">
             <ImageView fitHeight="235.0" fitWidth="251.0" pickOnBounds="true" smooth="false">
                 <Image url="@../Images/LogoCodexNaturalis.jpg" />
