--- a/CodexNaturalis/src/main/resources/styles.css
+++ b/CodexNaturalis/src/main/resources/styles.css
@@ -31,6 +31,7 @@
 
 .primary-button:hover {
     -fx-background-color: #1a7955;
+    -fx-font-family: 'Book Antiqua Bold Italic';
 }
 .popup{
     -fx-background-color: #a2ecbb;
@@ -57,6 +58,7 @@
     -fx-border-style: dashed;
 }
 
+
 .scene-dimensions {
     -fx-pref-width: 800px;
     -fx-pref-height: 800px;
@@ -72,6 +74,13 @@
     -fx-fit-height: 150px;
     -fx-fit-width: 200px;
 }
+.border {
+    -fx-border-color: #1a7955;
+    -fx-border-width: 3;
+    -fx-border-style: solid;
+    -fx-border-radius: 5;
+}
+
 
 .inputs-width {
     -fx-min-width: 200;
