--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="it.polimi.ingsw.gui.Controller.GameController">
+    <AnchorPane fx:id="gameBoardAnchorPane" layoutX="1156.0" layoutY="14.0">
+        <ImageView fx:id="boardImage" fitHeight="533.0" fitWidth="274.176" preserveRatio="true">
+            <Image url="@../Images/Board.jpg"/>
+        </ImageView>
+    </AnchorPane>
 
-<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.GameController">
-    <ImageView fitHeight="533.0" fitWidth="320.0" layoutX="1156.0" layoutY="14.0">
-        <Image url="@../Images/Board.jpg" />
-    </ImageView>
     <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="14.0">
         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
         </padding>
       <VBox alignment="CENTER" styleClass="border">
          <children>
@@ -46,13 +43,14 @@
     </VBox>
     <VBox layoutX="222.0" layoutY="14.0" spacing="20.0">
         <TabPane fx:id="playerDeskTabPane" prefWidth="845.0">
-            <Tab text="Player1 desk" />
-            <Tab text="Player2 desk" />
-            <Tab text="Player3 desk" />
-            <Tab text="Player4 desk" />
+            <Tab text="Player1 desk"/>
+            <Tab text="Player2 desk"/>
+            <Tab text="Player3 desk"/>
+            <Tab text="Player4 desk"/>
         </TabPane>
-        <ScrollPane fx:id="gameBoardScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0" prefWidth="900.0" style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
-            <AnchorPane fx:id="gameBoardContainer" style="-fx-background-color: #dedccc;" />
+        <ScrollPane fx:id="gameDeskScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0" prefWidth="900.0"
+                    style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
+            <AnchorPane fx:id="gameDeskContainer" style="-fx-background-color: #dedccc;"/>
         </ScrollPane>
 
         <Label fx:id="infoGame" styleClass="normal-label" text="what is happening" />
