--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,70 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.gui.Controller.GameController">
+
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.GameController">
     <AnchorPane fx:id="gameBoardAnchorPane" layoutX="1156.0" layoutY="14.0">
         <ImageView fx:id="boardImage" fitHeight="533.0" fitWidth="274.176" preserveRatio="true">
-            <Image url="@../Images/Board.jpg"/>
+            <Image url="@../Images/Board.jpg" />
         </ImageView>
     </AnchorPane>
 
     <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="14.0">
         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
         </padding>
-      <VBox alignment="CENTER" styleClass="border">
+      <VBox alignment="CENTER" style="-fx-border-color: purple; -fx-border-style: dashed;" styleClass="border">
          <children>
               <Label alignment="CENTER" prefHeight="30.0" prefWidth="129.0" styleClass="normal-label" text="OBJECTIVE CARDS">
                   <VBox.margin>
                       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                   </VBox.margin>
               </Label>
-              <VBox fx:id="objectiveCardsContainer" spacing="5" />
+              <VBox fx:id="objectiveCardsContainer" spacing="5">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></VBox>
          </children>
       </VBox>
-      <VBox alignment="CENTER" styleClass="border" translateY="10.0">
+      <VBox alignment="CENTER" style="-fx-border-color: #00d3ff; -fx-border-style: dashed;" styleClass="border" translateY="10.0">
          <children>
-              <Label alignment="CENTER" styleClass="normal-label" text="YOUR AVAILABLE CARDS">
+              <Label alignment="CENTER" styleClass="normal-label" text="YOUR CARDS">
                   <VBox.margin>
                       <Insets bottom="5.0" top="5.0" />
                   </VBox.margin>
               </Label>
               <Button fx:id="showBackButton" onAction="#handleShowBackButton" style="-fx-background-color: #a2ecbb;" text="Show Back" />
-              <VBox fx:id="playerHandBox" spacing="10" />
+              <VBox fx:id="playerHandBox" alignment="CENTER" spacing="10" style="-fx-border-insets: 10;">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></VBox>
          </children>
       </VBox>
     </VBox>
     <VBox layoutX="222.0" layoutY="14.0" spacing="20.0">
-        <TabPane fx:id="playerDeskTabPane" prefWidth="845.0">
-            <Tab text="Player1 desk"/>
-            <Tab text="Player2 desk"/>
-            <Tab text="Player3 desk"/>
-            <Tab text="Player4 desk"/>
+        <TabPane fx:id="playerDeskTabPane" prefWidth="845.0" style="-fx-background-color: #e7dfbd;">
+            <Tab text="Player1 desk" />
+            <Tab text="Player2 desk" />
+            <Tab text="Player3 desk" />
+            <Tab text="Player4 desk" />
         </TabPane>
-        <ScrollPane fx:id="gameDeskScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0" prefWidth="900.0"
-                    style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
-            <AnchorPane fx:id="gameDeskContainer" style="-fx-background-color: #dedccc;"/>
+        <ScrollPane fx:id="gameDeskScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0" prefWidth="900.0" style="-fx-focus-color: transparent; -fx-border-color: #4ac997; -fx-background-radius: 5;" styleClass="border" vbarPolicy="NEVER">
+            <AnchorPane fx:id="gameDeskContainer" style="-fx-background-color: #dedccc;" />
         </ScrollPane>
 
         <Label fx:id="infoGame" styleClass="normal-label" text="what is happening" />
-      <HBox alignment="CENTER" styleClass="border">
+      <HBox alignment="CENTER" style="-fx-border-color: #8e90fd; -fx-border-style: dashed;" styleClass="border">
          <children>
-              <Label styleClass="normal-label" text="RESOURCE CARD DESK">
+              <Label styleClass="normal-label" text="RESOURCE CARD DESK" translateX="-20.0">
         </Label>
               <HBox fx:id="resourceDeck" spacing="10" />
          </children>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" top="5.0" />
+         </padding>
       </HBox>
-      <HBox alignment="CENTER" styleClass="border">
+      <HBox alignment="CENTER" style="-fx-border-color: #eaab58; -fx-border-style: dashed;" styleClass="border">
          <children>
-              <Label styleClass="normal-label" text="GOLDEN CARD DESK">
-        </Label>
+              <Label styleClass="normal-label" text="GOLDEN CARD DESK" translateX="-20.0">
+               <padding>
+                  <Insets bottom="5.0" top="5.0" />
+               </padding></Label>
               <HBox fx:id="goldenDeck" spacing="10" />
          </children>
       </HBox>
@@ -84,11 +106,11 @@
             <Label fx:id="messagePopUp" alignment="CENTER" styleClass="normal-label" text="MESSAGE" textFill="SEAGREEN" BorderPane.alignment="CENTER" />
         </center>
     </BorderPane>
-    <VBox alignment="TOP_CENTER" layoutX="1148.0" layoutY="542.0" >
+    <VBox alignment="TOP_CENTER" layoutX="1148.0" layoutY="542.0">
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
         </padding>
-        <TabPane fx:id="chatGameTabPane" prefHeight="200.0" prefWidth="400.0">
+        <TabPane fx:id="chatGameTabPane" prefHeight="200.0" prefWidth="400.0" style="-fx-background-color: #e7dfbd; -fx-background-radius: 5; -fx-border-color: orange;" styleClass="border" translateY="10.0">
             <tabs>
 
 
