--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -35,7 +35,7 @@
                 <padding>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                 </padding>
-                <Label alignment="CENTER" styleClass="normal-label" text="YOUR AVAILABLE CARDS">
+                <Label alignment="CENTER" styleClass="normal-label" text="YOUR  CARDS">
                     <VBox.margin>
                         <Insets bottom="5.0" top="5.0" />
                     </VBox.margin>
@@ -93,20 +93,20 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
-                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                            <Image url="@../Images/Board.jpg" />
+                        <ImageView fitHeight="50.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../Images/CN_Manuscript.png" />
                         </ImageView>
                         <Label fx:id="manuscriptLabel" alignment="CENTER" text="MANUSCRIPT" />
                     </HBox>
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                            <Image url="@../Images/Board.jpg" />
+                            <Image url="@../Images/CN_Quill.png" />
                         </ImageView>
                         <Label fx:id="quillLabel" alignment="CENTER" text="QUILL" />
                     </HBox>
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                            <Image url="@../Images/Board.jpg" />
+                            <Image url="@../Images/CN_inkwell.png" />
                         </ImageView>
                         <Label fx:id="inkwellLabel" alignment="CENTER" text="INQUELL" />
                     </HBox>
