--- a/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
@@ -4,33 +4,35 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.gui.controller.MainMenuStateController">
-    <StackPane styleClass="scene-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.controller.MainMenuStateController">
+    <StackPane styleClass="scene-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <VBox alignment="CENTER" spacing="10">
             <ImageView fitHeight="235.0" fitWidth="251.0" pickOnBounds="true" smooth="false">
-                <Image url="@../Images/LogoCodexNaturalis.jpg"/>
+                <Image url="@../Images/LogoCodexNaturalis.jpg" />
                 <VBox.margin>
-                    <Insets top="-100.0"/> <!-- Negative margin to move the image a bit higher than center -->
+                    <Insets top="-100.0" /> <!-- Negative margin to move the image a bit higher than center -->
                 </VBox.margin>
             </ImageView>
-            <Label fx:id="errorLabel" styleClass="normal-label" prefHeight="40.0" prefWidth="223.0" textFill="#f80300">
+            <Label fx:id="errorLabel" prefHeight="40.0" prefWidth="223.0" styleClass="normal-label" textFill="#f80300">
             </Label>
-            <Label styleClass="normal-label" text="Before playing, choose a username">
-            </Label>
-            <TextField fx:id="usernameField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="19.0"
-                       prefWidth="200.0" promptText="Enter your username here"/>
+            <Label text="Before playing, choose a username">
+            <font>
+               <Font name="Book Antiqua Bold Italic" size="14.0" />
+            </font></Label>
+            <TextField fx:id="usernameField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="19.0" prefWidth="200.0" promptText="Enter your username here" />
 
-            <Button fx:id="playButton" onAction="#handlePlayButton" styleClass="primary-button" text="Play"/>
+            <Button fx:id="playButton" onAction="#handlePlayButton" styleClass="primary-button" text="Play" />
         </VBox>
     </StackPane>
     <!-- Top-left Corner -->
-    <ImageView rotate="180" scaleX="-1" styleClass="corner-image" AnchorPane.leftAnchor="0.0"
-               AnchorPane.topAnchor="0.0">
+    <ImageView rotate="180" scaleX="-1" styleClass="corner-image" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
     </ImageView>
 
     <!-- Top-Right Corner -->
