--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -54,7 +54,7 @@
                 <Button fx:id="centerButton" onAction="#handleCenterClick" styleClass="little-label" text="center" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
             </AnchorPane>
 
-            <Label fx:id="infoGame" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="128.0" style="-fx-background-color: #e7dfbd; -fx-background-radius: 5; -fx-border-color: #daae82; -fx-border-radius: 5;" styleClass="normal-label" text="what is happening" />
+            <Label fx:id="infoGame" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" style="-fx-background-color: #e7dfbd; -fx-background-radius: 5; -fx-border-color: #daae82; -fx-border-radius: 5;" styleClass="normal-label" text="what is happening" />
             <HBox alignment="CENTER" spacing="20.0">
                 <VBox alignment="CENTER" spacing="10.0">
                     <padding>
@@ -127,6 +127,8 @@
             </HBox>
         </VBox>
         <VBox alignment="CENTER" spacing="10.0">
+         <Button fx:id="exitButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleExit" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="EXIT and return to LOBBY" translateX="10.0">
+   </Button>
             <AnchorPane fx:id="gameBoardAnchorPane">
                 <ImageView fitHeight="498.0" fitWidth="286.0" preserveRatio="true">
                     <Image url="@../Images/Board.jpg" />
@@ -150,9 +152,4 @@
             <Label fx:id="messagePopUp" alignment="CENTER" styleClass="normal-label" text="MESSAGE" textFill="SEAGREEN" BorderPane.alignment="CENTER" />
         </center>
     </BorderPane>
-   <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text=" EXIT" AnchorPane.leftAnchor="920.0" AnchorPane.topAnchor="480.0">
-      <font>
-         <Font name="Book Antiqua Bold Italic" size="14.0" />
-      </font>
-   </Button>
 </AnchorPane>
