--- a/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
@@ -14,7 +14,7 @@
         <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
     <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../Images/CN_decoration10.png"/>
+        <Image url="@../Images/CN_decoration10.png" />
     </ImageView>
    <Label styleClass="title-label" text="PLAY YOUR STARTER CARD">
    </Label>
@@ -36,9 +36,9 @@
         </VBox>
     </HBox>
     <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-        <Image url="@../Images/CN_decoration10.png"/>
+        <Image url="@../Images/CN_decoration10.png" />
     </ImageView>
-   <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="78.0" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="EXIT">
+   <Button fx:id="exit" mnemonicParsing="false" onAction="#handleExit" prefHeight="27.0" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="EXIT and RETURN TO LOBBY">
       <VBox.margin>
          <Insets />
       </VBox.margin>
