--- a/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
@@ -14,10 +14,10 @@
 <AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.controller.MainMenuStateController">
     <StackPane styleClass="scene-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <VBox alignment="CENTER" spacing="10">
-            <ImageView fitHeight="235.0" fitWidth="251.0" pickOnBounds="true" smooth="false">
+            <ImageView fitHeight="235.0" fitWidth="251.0" pickOnBounds="true" smooth="false" translateY="50.0">
                 <Image url="@../Images/LogoCodexNaturalis.jpg" />
                 <VBox.margin>
-                    <Insets top="-100.0" /> <!-- Negative margin to move the image a bit higher than center -->
+                    <Insets /> <!-- Negative margin to move the image a bit higher than center -->
                 </VBox.margin>
             </ImageView>
             <Label fx:id="errorLabel" prefHeight="40.0" prefWidth="223.0" styleClass="normal-label" textFill="#f80300">
